[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/art/crabs/crab_1.png" type="Texture" id=1]
[ext_resource path="res://assets/art/crabs/crab_2.png" type="Texture" id=2]
[ext_resource path="res://assets/art/crabs/crab_idle.png" type="Texture" id=3]
[ext_resource path="res://scenes/tasks/crab/Crab.gd" type="Script" id=4]
[ext_resource path="res://assets/art/crabs/shell.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 29, 25 )

[sub_resource type="CircleShape2D" id=1]
radius = 98.0

[node name="Crab" type="Area2D" groups=["crab"]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "idle"

[node name="Shell" type="Sprite" parent="AnimatedSprite"]
visible = false
position = Vector2( -58, -20 )
texture = ExtResource( 5 )

[node name="Hitbox" type="Area2D" parent="AnimatedSprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite/Hitbox"]
position = Vector2( 0, 88 )
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -65, -73 )
shape = SubResource( 1 )
disabled = true

[node name="StartStopTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="AnimatedSprite/Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="StartStopTimer" to="." method="_on_StartStopTimer_timeout"]
